third_party/move/move-compiler-v2/tests/ability-checker/ability_violation.exp
============ initial bytecode ================

[variant baseline]
fun ability::invalid_copy() {
     var $t0: ability::Impotent
     var $t1: ability::Impotent
     var $t2: bool
     var $t3: ability::Impotent
     var $t4: ability::Impotent
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: $t0 := infer($t1)
  3: $t3 := infer($t0)
  4: $t4 := infer($t0)
  5: return ()
}


[variant baseline]
fun ability::invalid_move_to($t0: &signer) {
     var $t1: ability::Impotent
     var $t2: bool
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: move_to<ability::Impotent>($t0, $t1)
  3: return ()
}


[variant baseline]
fun ability::no_key($t0: address) {
     var $t1: address
     var $t2: ability::Impotent
     var $t3: ability::S<ability::Impotent>
     var $t4: &mut ability::Impotent
     var $t5: &ability::Impotent
     var $t6: bool
  0: $t1 := infer($t0)
  1: $t2 := move_from<ability::Impotent>($t1)
  2: $t3 := move_from<ability::S<ability::Impotent>>($t0)
  3: $t4 := borrow_global<ability::Impotent>($t0)
  4: $t5 := borrow_global<ability::Impotent>($t0)
  5: $t6 := exists<ability::Impotent>($t0)
  6: return ()
}


Diagnostics:
error: cannot copy local `x` implicitly
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^

============ after LiveVarAnalysisProcessor: ================

[variant baseline]
fun ability::invalid_copy() {
     var $t0: ability::Impotent
     var $t1: ability::Impotent
     var $t2: bool
     var $t3: ability::Impotent
     var $t4: ability::Impotent
     # live vars:
  0: $t2 := false
     # live vars: $t2
  1: $t1 := pack ability::Impotent($t2)
     # live vars: $t1
  2: $t0 := move($t1)
     # live vars: $t0
  3: $t3 := copy($t0)
     # live vars: $t0
  4: $t4 := move($t0)
     # live vars:
  5: return ()
}


[variant baseline]
fun ability::invalid_move_to($t0: &signer) {
     var $t1: ability::Impotent
     var $t2: bool
     # live vars: $t0
  0: $t2 := false
     # live vars: $t0, $t2
  1: $t1 := pack ability::Impotent($t2)
     # live vars: $t0, $t1
  2: move_to<ability::Impotent>($t0, $t1)
     # live vars:
  3: return ()
}


[variant baseline]
fun ability::no_key($t0: address) {
     var $t1: address
     var $t2: ability::Impotent
     var $t3: ability::S<ability::Impotent>
     var $t4: &mut ability::Impotent
     var $t5: &ability::Impotent
     var $t6: bool
     # live vars: $t0
  0: $t1 := copy($t0)
     # live vars: $t0, $t1
  1: $t2 := move_from<ability::Impotent>($t1)
     # live vars: $t0
  2: $t3 := move_from<ability::S<ability::Impotent>>($t0)
     # live vars: $t0
  3: $t4 := borrow_global<ability::Impotent>($t0)
     # live vars: $t0
  4: $t5 := borrow_global<ability::Impotent>($t0)
     # live vars: $t0
  5: $t6 := exists<ability::Impotent>($t0)
     # live vars:
  6: return ()
}

============ after MemorySafetyProcessor: ================

[variant baseline]
fun ability::invalid_copy() {
     var $t0: ability::Impotent
     var $t1: ability::Impotent
     var $t2: bool
     var $t3: ability::Impotent
     var $t4: ability::Impotent
     # live vars:
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  0: $t2 := false
     # live vars: $t2
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  1: $t1 := pack ability::Impotent($t2)
     # live vars: $t1
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t2}
     #
  2: $t0 := move($t1)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t1,$t2}
     #
  3: $t3 := copy($t0)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t1,$t2}
     #
  4: $t4 := move($t0)
     # live vars:
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t0,$t1,$t2}
     #
  5: return ()
}


[variant baseline]
fun ability::invalid_move_to($t0: &signer) {
     var $t1: ability::Impotent
     var $t2: bool
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  0: $t2 := false
     # live vars: $t0, $t2
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  1: $t1 := pack ability::Impotent($t2)
     # live vars: $t0, $t1
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t2}
     #
  2: move_to<ability::Impotent>($t0, $t1)
     # live vars:
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t0,$t1,$t2}
     #
  3: return ()
}


[variant baseline]
fun ability::no_key($t0: address) {
     var $t1: address
     var $t2: ability::Impotent
     var $t3: ability::S<ability::Impotent>
     var $t4: &mut ability::Impotent
     var $t5: &ability::Impotent
     var $t6: bool
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  0: $t1 := copy($t0)
     # live vars: $t0, $t1
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  1: $t2 := move_from<ability::Impotent>($t1)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  2: $t3 := move_from<ability::S<ability::Impotent>>($t0)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  3: $t4 := borrow_global<ability::Impotent>($t0)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  4: $t5 := borrow_global<ability::Impotent>($t0)
     # live vars: $t0
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {}
     #
  5: $t6 := exists<ability::Impotent>($t0)
     # live vars:
     # graph: {}
     # local_to_label: {}
     # global_to_label: {}
     # moved: {$t0}
     #
  6: return ()
}

============ after ExplicitDrop: ================

[variant baseline]
fun ability::invalid_copy() {
     var $t0: ability::Impotent
     var $t1: ability::Impotent
     var $t2: bool
     var $t3: ability::Impotent
     var $t4: ability::Impotent
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: $t0 := move($t1)
  3: $t3 := copy($t0)
  4: drop($t3)
  5: $t4 := move($t0)
  6: drop($t4)
  7: return ()
}


[variant baseline]
fun ability::invalid_move_to($t0: &signer) {
     var $t1: ability::Impotent
     var $t2: bool
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: move_to<ability::Impotent>($t0, $t1)
  3: return ()
}


[variant baseline]
fun ability::no_key($t0: address) {
     var $t1: address
     var $t2: ability::Impotent
     var $t3: ability::S<ability::Impotent>
     var $t4: &mut ability::Impotent
     var $t5: &ability::Impotent
     var $t6: bool
  0: $t1 := copy($t0)
  1: $t2 := move_from<ability::Impotent>($t1)
  2: drop($t2)
  3: $t3 := move_from<ability::S<ability::Impotent>>($t0)
  4: drop($t3)
  5: $t4 := borrow_global<ability::Impotent>($t0)
  6: drop($t4)
  7: $t5 := borrow_global<ability::Impotent>($t0)
  8: drop($t5)
  9: $t6 := exists<ability::Impotent>($t0)
 10: return ()
}


Diagnostics:
error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:4:3
   │
 4 │         move_from<T>(addr);
   │         ^^^^^^^^^^^^^^^^^^
   ·
14 │         move_from_no_key<Impotent>(addr);
   │         -------------------------------- in a call inlined at this callsite

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:4:3
   │
 4 │         move_from<T>(addr);
   │         ^^^^^^^^^^^^^^^^^^
   ·
14 │         move_from_no_key<Impotent>(addr);
   │         -------------------------------- in a call inlined at this callsite

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:15:3
   │
15 │         move_from<S<Impotent>>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:15:3
   │
15 │         move_from<S<Impotent>>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:16:3
   │
16 │         borrow_global_mut<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:17:3
   │
17 │         borrow_global<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:18:3
   │
18 │         exists<Impotent>(addr);
   │         ^^^^^^^^^^^^^^^^^^^^^^

error: no key ability
   ┌─ tests/ability-checker/ability_violation.move:22:3
   │
22 │         move_to(signer, Impotent {})
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: cannot copy
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:27:4
   │
27 │         (x, x);
   │          ^

error: cannot drop
   ┌─ tests/ability-checker/ability_violation.move:27:7
   │
27 │         (x, x);
   │             ^

============ after AbilityChecker: ================

[variant baseline]
fun ability::invalid_copy() {
     var $t0: ability::Impotent
     var $t1: ability::Impotent
     var $t2: bool
     var $t3: ability::Impotent
     var $t4: ability::Impotent
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: $t0 := move($t1)
  3: $t3 := copy($t0)
  4: drop($t3)
  5: $t4 := move($t0)
  6: drop($t4)
  7: return ()
}


[variant baseline]
fun ability::invalid_move_to($t0: &signer) {
     var $t1: ability::Impotent
     var $t2: bool
  0: $t2 := false
  1: $t1 := pack ability::Impotent($t2)
  2: move_to<ability::Impotent>($t0, $t1)
  3: return ()
}


[variant baseline]
fun ability::no_key($t0: address) {
     var $t1: address
     var $t2: ability::Impotent
     var $t3: ability::S<ability::Impotent>
     var $t4: &mut ability::Impotent
     var $t5: &ability::Impotent
     var $t6: bool
  0: $t1 := copy($t0)
  1: $t2 := move_from<ability::Impotent>($t1)
  2: drop($t2)
  3: $t3 := move_from<ability::S<ability::Impotent>>($t0)
  4: drop($t3)
  5: $t4 := borrow_global<ability::Impotent>($t0)
  6: drop($t4)
  7: $t5 := borrow_global<ability::Impotent>($t0)
  8: drop($t5)
  9: $t6 := exists<ability::Impotent>($t0)
 10: return ()
}
